--- a/bstyle.css
+++ b/bstyle.css
@@ -161,8 +161,12 @@ a {
         font-size: 1rem;
     }
 
-    h5{
+    h5 {
         font-size: 1.5rem;
+    }
+
+    h6 {
+        font-size: 2rem;
     }
    
     p {
