--- a/css/bstyle.css
+++ b/css/bstyle.css
@@ -160,10 +160,15 @@ a {
     h4 {
         font-size: 1rem;
     }
-    h7 {
-        font-size: 0.7rem;
+
+    h5 {
+        font-size: 1.5rem;
     }
 
+    h6 {
+        font-size: 1.5rem;
+    }
+   
     p {
         font-size: 1.5rem;
     }
